--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ name: BitMEX Strategy Backtest
 on:
   # Manual trigger - use this to start a new session
   workflow_dispatch:
+  schedule:
+    - cron: '*/10 * * * *'  # Run every 10 minutes
   
   # Run on commits/pushes to main branch
   push:
